<?xml version="1.0"?>
<package format="2">
  <name>ros_nagios_diagnostics</name>
  <version>1.0.0</version>
  <description>ros package to expose diagnostics as service for nagios</description>

  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_aggregator</depend>
</package>
